2010-10-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-open-connection): Allow tls as a synonym for ssl.

	* dgnushack.el (iswitchb): Require to shut up the compiler.

	* shr.el (shr-ensure-paragraph): Fix the non-empty line case.
	(shr-insert): Tweak line breaking.
	(shr-insert): Handle <pre> better.
	(shr-tag-li): Get <li> indentation right.
	(shr-tag-li): Get <li> indentation even righter.
	(shr-tag-blockquote): Ensure paragraph start.
	(shr-make-table): Tweak table generation.
	(shr-make-table): Fix typo.

	* shr.el: Implement table rendering.

2010-10-04  Julien Danjou  <julien@danjou.info>

	* gnus-html.el (gnus-html-put-image): Fix resize image code.

2010-10-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): Use string anchors instead of line anchors.

2010-10-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el: Add headings.
	(shr-ensure-paragraph): Actually work.
	(shr-tag-li): Make <ul> prettier.
	(shr-insert): Get white space at the beginning/end of elements right.
	(shr-tag-p): Collapse subsequent <p>s.
	(shr-ensure-paragraph): Don't insert double line feeds after blank
	lines.
	(shr-insert): \t is also space.
	(shr-tag-s): Fix "s" tag name function.
	(shr-tag-s): Fix face prop name.

2010-10-03  Julien Danjou  <julien@danjou.info>

	* gnus-html.el (gnus-html-put-image): Use gnus-rescale-image.

	* mm-view.el (gnus-window-inside-pixel-edges): Add autoload for
	gnus-window-inside-pixel-edges.

	* gnus-ems.el (gnus-window-inside-pixel-edges): Move from gnus-html to
	gnus-ems.

	* mm-view.el (mm-inline-image-emacs): Support image resizing.

	* gnus-util.el (gnus-rescale-image): Add generic gnus-rescale-image
	function.

	* mm-decode.el (mm-inline-large-images): Enhance defcustom and add
	resize choice.

2010-10-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-p): Don't insert newlines on empty tags at the
	beginning of the buffer.
