@@ -1,6 +1,7 @@
 2010-10-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* nnimap.el (nnimap-open-connection): Allow tls as a synonym for ssl.
+	(nnimap-close-server): Implement.
 
 	* dgnushack.el (iswitchb): Require to shut up the compiler.
 
